tests/array_literals_empty_bad.hop
// Verifies empty array literal without context is rejected.
fn main() {
	var a = []
	_ = a
}
